# kirara.js

./: Cargo.toml  README.md  package.json  server.js
crates/kirara-core/: Cargo.toml
crates/kirara-core/src/: body.rs  collide.rs  constraint.rs  gjk.rs  lib.rs  math.rs  shape.rs  solver.rs  world.rs
crates/kirara-wasm/: Cargo.toml
crates/kirara-wasm/src/: lib.rs
examples/threejs-demo/: index.html
