[package]
name = "kirara-wasm"
version = "0.1.0"
edition = "2021"
description = "kirara.js - wasm-bindgen bindings exposing kirara-core to JS/three.js"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
kirara-core = { path = "../kirara-core" }
wasm-bindgen = "0.2"

[profile.release]
opt-level = "z"
lto = true
